added portfolio links and skills images

--- a/index.html
+++ b/index.html
@@ -58,34 +58,59 @@
 <section class="content" id="about">
   <div class="container">
     <div class="row" >
-      <div class="ta__center">
-        <h3>Diana: Web Developer</h3>
-        <div class="grid_1">
-        </div>
-        <div class="grid_4">
-          <h4>about me</h4>
+
+          <h3>about me</h3>
           <ul>
-            <li>Full Stack Web Developer</li>
-            <li>Project Manager</li>
-            <li>Stanford '11, Communication</li>
+            <li class="about_me">Full Stack Web Developer</li>
+            <li class="about_me">Project Manager</li>
+            <li class="about_me">Stanford '11, Communication</li>
           </ul>
         </div>
-        <div class="grid_3">
-        </div>
 
-        <div class="grid_4">
-         <h4>skills</h4>
-         <ul>
-          <li>Ruby</li>
-          <li>Sinatra</li>
-          <li>Javascript</li>
-          <li>HTML5</li>
-          <li>CSS3</li>
-          <li>Rails</li>
-          <li>jQuery</li>
-          <li>Git</li>
-          <li>Heroku</li>
-        </ul>
+<h3>skills</h3>
+
+        <div class="flextainer">
+
+
+
+          <figure>
+            <img class="skills" src="imgs/ruby.png" alt="Ruby">
+            <figcaption>Ruby</figcaption>
+          </figure>
+
+          <figure>
+            <img class="skills" src="imgs/sinatra.png" alt="Sinatra">
+          <figcaption>Sinatra</figcaption>
+        </figure>
+          <figure>
+            <img class="skills" src="imgs/js.png" alt="JavaScript">
+          <figcaption>Javascript</figcaption>
+        </figure>
+          <figure>
+            <img class="skills" src="imgs/HTML.png" alt="HTML5">
+          <figcaption>HTML5</figcaption>
+        </figure>
+          <figure>
+            <img class="skills" src="imgs/csss.png" alt="CSS3">
+          <figcaption>CSS3</figcaption>
+        </figure>
+          <figure>
+            <img class="skills" src="imgs/rails.png" alt="Rails">
+          <figcaption>Rails</figcaption>
+        </figure>
+          <figure>
+            <img class="skills" src="imgs/jQuery.png" alt="jQuery">
+          <figcaption>jQuery</figcaption>
+        </figure>
+          <figure>
+            <img class="skills" src="imgs/git.png" alt="Git">
+          <figcaption>Git</figcaption>
+        </figure>
+          <figure>
+            <img class="skills" src="imgs/heroku.png" alt="Heroku">
+          <figcaption>Heroku</figcaption>
+        </figure>
+
       </div>
       <div class="grid_1">
       </div>
@@ -100,44 +125,64 @@
     <div class="flextainer">
 
 
-
-          <div class="ih-item circle effect2 left_to_right"><a href="#">
+        <figure>
+          <div class="ih-item circle effect2 left_to_right">
+            <a href="http://bit.ly/pourmeone">
             <div class="img"><img src="imgs/PMO2.png" alt="img"></div>
             <div class="info">
               <h3>Pour Me One</h3>
-              <p>Sinatra | </p>
-            </div></a>
+              <p>learn more</p>
+            </div>
+            </a>
           </div>
+          <figcaption>Sinatra | Ruby | jQuery |<br> CSS | HTML | OAuth | APIs</figcaption>
+          <p></p>
+        </figure>
 
 
 
-          <div class="ih-item circle effect2 left_to_right"><a href="#">
+          <figure>
+            <div class="ih-item circle effect2 left_to_right">
+              <a href="https://github.com/dmarquezdlt/volunteer.me">
             <div class="img"><img src="imgs/VM.png" alt="img"></div>
             <div class="info">
               <h3>Volunteer.me</h3>
               <p>learn more</p>
             </div></a>
           </div>
+          <figcaption>Rails | Ruby | JS |<br> Bootstrap | List.js | Rspec</figcaption>
+          <p></p>
+        </figure>
 
 
 
-          <div class="ih-item circle effect2 left_to_right"><a href="#">
+          <figure>
+            <div class="ih-item circle effect2 left_to_right">
+              <a href="https://github.com/dmarquezdlt/battleship">
             <div class="img"><img src="imgs/Battleship.jpg" alt="img"></div>
             <div class="info">
               <h3>Battleship</h3>
               <p>learn more</p>
             </div></a>
           </div>
+          <figcaption>Ruby</figcaption>
+          <p></p>
+        </figure>
 
 
 
-          <div class="ih-item circle effect2 left_to_right"><a href="#">
+          <figure>
+            <div class="ih-item circle effect2 left_to_right">
+              <a href="https://quick-question.herokuapp.com/questions">
             <div class="img"><img src="imgs/QQ.png" alt="img"></div>
             <div class="info">
               <h3>Quick Question</h3>
               <p>learn more</p>
             </div></a>
           </div>
+          <figcaption>Rails | AJAX | CSS3 </figcaption>
+          <p></p>
+        </figure>
 
 
     </div>
