--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <link rel="stylesheet" type="text/css" href="style-sheets/index.css">
   <meta charset="utf-8">
   <meta name="format-detection" content="telephone=no">
-  <link rel="icon" href="favicon.ico">
-  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="css/stuck.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/ihover.css">
@@ -194,7 +193,7 @@
   <div class="container">
     <div class="row" >
       <div class="ta__center">
-        <h3>Blog</h3>
+        <h3><a href="https://findinit.wordpress.com/">Blog</a></h3>
         <div class="about">
 
         </div>
