added php as a skill and img

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
             <img class="skills" src="imgs/heroku.png" alt="Heroku">
           <figcaption>Heroku</figcaption>
         </figure>
+         <figure>
+            <img class="skills" src="imgs/php.png" alt="PHP">
+          <figcaption>PHP</figcaption>
+        </figure>
 
       </div>
       <div class="grid_1">
