changed about me headlines

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
           <h3>about me</h3>
           <ul>
             <li class="about_me">Full Stack Web Developer</li>
-            <li class="about_me">Project Manager</li>
+        <!--     <li class="about_me">Project Manager</li> -->
+        <li class="about_me">Dev Bootcamp Alumni</li>
             <li class="about_me">Stanford '11, Communication</li>
+
           </ul>
         </div>
 
